[gd_scene load_steps=11 format=2]

[ext_resource path="res://Other/Objects/Door/door-open.png" type="Texture" id=1]
[ext_resource path="res://Other/Objects/Door/door-closed.png" type="Texture" id=2]
[ext_resource path="res://Other/Objects/PxPlate/jet-px-plate.png" type="Texture" id=3]
[ext_resource path="res://Other/Objects/Door/DoorPxPlate.gd" type="Script" id=4]
[ext_resource path="res://Other/Objects/PxPlate/bot-px-plate.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "close"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Jet/Door/Closed:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Jet/Door/Opened:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bot/Door/Closed:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Bot/Door/Opened:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Jet/Door/Collisions/Closed:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Jet/Door/Collisions/Opened:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Bot/Door/Collisions/Closed:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Bot/Door/Collisions/Opened:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Jet/Door/Closed:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Jet/Door/Opened:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bot/Door/Closed:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Bot/Door/Opened:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Jet/Door/Collisions/Closed:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Jet/Door/Collisions/Opened:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Bot/Door/Collisions/Closed:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Bot/Door/Collisions/Opened:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.05995, 31.7962 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 31.8348, 7.80226 )

[sub_resource type="CircleShape2D" id=5]
radius = 18.1126

[node name="DoorPxPlate" type="Node2D"]
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/close = SubResource( 1 )
anims/open = SubResource( 2 )

[node name="Jet" type="Node2D" parent="."]

[node name="Door" type="Node2D" parent="Jet"]

[node name="Closed" type="Sprite" parent="Jet/Door"]
texture = ExtResource( 2 )
centered = false

[node name="Opened" type="Sprite" parent="Jet/Door"]
visible = false
texture = ExtResource( 1 )
centered = false

[node name="Collisions" type="Area2D" parent="Jet/Door"]

[node name="Closed" type="CollisionShape2D" parent="Jet/Door/Collisions"]
position = Vector2( 7.98411, 32.0189 )
shape = SubResource( 3 )

[node name="Opened" type="CollisionShape2D" parent="Jet/Door/Collisions"]
position = Vector2( 32.0257, 7.97725 )
shape = SubResource( 4 )
disabled = true

[node name="DetectJet" type="Area2D" parent="Jet"]
position = Vector2( -65.9447, 0 )
collision_layer = 0

[node name="PxPlate" type="Node2D" parent="Jet/DetectJet"]

[node name="Sprite" type="Sprite" parent="Jet/DetectJet/PxPlate"]
texture = ExtResource( 3 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jet/DetectJet"]
position = Vector2( 31.9902, 31.8499 )
shape = SubResource( 5 )

[node name="Bot" type="Node2D" parent="."]
position = Vector2( 0, 71.5 )

[node name="Door" type="Node2D" parent="Bot"]

[node name="Closed" type="Sprite" parent="Bot/Door"]
texture = ExtResource( 2 )
centered = false

[node name="Opened" type="Sprite" parent="Bot/Door"]
visible = false
texture = ExtResource( 1 )
centered = false

[node name="Collisions" type="Area2D" parent="Bot/Door"]
position = Vector2( 0, 0.000534058 )

[node name="Closed" type="CollisionShape2D" parent="Bot/Door/Collisions"]
position = Vector2( 7.98411, 32.0189 )
shape = SubResource( 3 )

[node name="Opened" type="CollisionShape2D" parent="Bot/Door/Collisions"]
position = Vector2( 32.0257, 7.97725 )
shape = SubResource( 4 )
disabled = true

[node name="DetectBot" type="Area2D" parent="Bot"]
position = Vector2( -65.9447, 0 )
collision_layer = 0
collision_mask = 2

[node name="PxPlate" type="Node2D" parent="Bot/DetectBot"]

[node name="Sprite" type="Sprite" parent="Bot/DetectBot/PxPlate"]
texture = ExtResource( 5 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bot/DetectBot"]
position = Vector2( 31.9902, 31.8499 )
shape = SubResource( 5 )

[node name="Timers" type="Node2D" parent="."]

[node name="WaitForDoorOpen" type="Timer" parent="Timers"]
one_shot = true
[connection signal="body_entered" from="Jet/DetectJet" to="." method="_on_DetectJet_body_entered"]
[connection signal="body_exited" from="Jet/DetectJet" to="." method="_on_DetectJet_body_exited"]
[connection signal="body_entered" from="Bot/DetectBot" to="." method="_on_DetectBot_body_entered"]
[connection signal="body_exited" from="Bot/DetectBot" to="." method="_on_DetectBot_body_exited"]
[connection signal="timeout" from="Timers/WaitForDoorOpen" to="." method="_on_WaitForDoorOpen_timeout"]
